Issue/#2019 notification UI (#2153)
* Refactor error notifications

--- a/src/main/resources/theme/immediate_notification.fxml
+++ b/src/main/resources/theme/immediate_notification.fxml
@@ -4,18 +4,18 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.web.WebView?>
 <VBox xmlns:fx="http://javafx.com/fxml/1" maxHeight="1.7976931348623157E308" spacing="20.0" styleClass="content"
       VBox.vgrow="ALWAYS" fx:id="immediateNotificationRoot"
       xmlns="http://javafx.com/javafx/8.0.141"
       fx:controller="com.faforever.client.notification.ImmediateNotificationController">
     <children>
-        <WebView fx:id="errorMessageView" minHeight="50.0" minWidth="100.0" prefHeight="100.0"
-                 prefWidth="-1.0"/>
-        <Label fx:id="exceptionAreaTitleLabel" styleClass="h2" text="%errorDetails"/>
-        <TextArea fx:id="exceptionTextArea" editable="false" maxHeight="1.7976931348623157E308"
-                  maxWidth="1.7976931348623157E308" wrapText="true" VBox.vgrow="ALWAYS"/>
+        <Label fx:id="notificationText" wrapText="true"/>
+        <TitledPane fx:id="exceptionArea" styleClass="h3" text="%errorDetails">
+            <TextArea fx:id="exceptionTextArea" editable="false" wrapText="true"/>
+        </TitledPane>
+        <Label fx:id="helpText" wrapText="true" text="%findHelp"/>
     </children>
     <VBox.margin>
         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
