fix sudden popup "Watch" buttons when adding or removing a item from a table

--- a/src/main/resources/theme/vault/replay/watch_button.fxml
+++ b/src/main/resources/theme/vault/replay/watch_button.fxml
@@ -2,4 +2,7 @@
 
 
 <?import javafx.scene.control.Button?>
-<Button xmlns:fx="http://javafx.com/fxml/1" fx:id="watchButton" disable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" text="%game.watchButtonFormat" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="com.faforever.client.vault.replay.WatchButtonController" />
+<Button xmlns:fx="http://javafx.com/fxml/1" fx:id="watchButton" disable="true" maxHeight="1.7976931348623157E308"
+        maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false"
+        xmlns="http://javafx.com/javafx/8.0.141"
+        fx:controller="com.faforever.client.vault.replay.WatchButtonController"/>
