--- a/src/main/resources/theme/login.fxml
+++ b/src/main/resources/theme/login.fxml
@@ -2,118 +2,112 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<VBox fx:id="loginRoot" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="login-root" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.login.LoginController">
-  <children>
-      <VBox alignment="CENTER" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
-          <VBox alignment="CENTER" maxWidth="-Infinity" prefWidth="400.0" styleClass="login">
-              <children>
-                  <StackPane onMouseClicked="#onMouseClicked">
-                      <VBox.margin>
-                          <Insets bottom="70.0" top="70.0"/>
-                      </VBox.margin>
-                      <Region styleClass="login-logo"/>
-                  </StackPane>
-                  <VBox fx:id="loginProgressPane" alignment="CENTER" maxWidth="1.7976931348623157E308">
-                      <children>
-                          <ProgressIndicator prefHeight="80.0" prefWidth="80.0"/>
-                          <Label text="%login.progress.message">
-                              <VBox.margin>
-                                  <Insets top="14.0" />
-                              </VBox.margin>
-                          </Label>
-                          <Pane VBox.vgrow="ALWAYS" />
-                          <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onCancelLoginButtonClicked" text="%login.button.cancel">
-                              <VBox.margin>
-                                  <Insets top="20.0" />
-                              </VBox.margin>
-                          </Button>
-                      </children>
-                  </VBox>
-                  <Label fx:id="loginErrorLabel" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" styleClass="hint" text="This error message is supposed to be long enough to test text wrapping" wrapText="true">
-                      <graphic>
-                          <Region styleClass="icon,error-icon" />
-                      </graphic>
-                      <VBox.margin>
-                          <Insets bottom="5.0" />
-                      </VBox.margin>
-                  </Label>
-                  <Button fx:id="downloadUpdateButton" maxWidth="1.7976931348623157E308" minWidth="-Infinity" onAction="#onDownloadUpdateButtonClicked" prefHeight="50.0" text="%login.button.downloadUpdate">
-                      <VBox.margin>
-                          <Insets bottom="10.0" />
-                      </VBox.margin>
-                  </Button>
-                  <VBox fx:id="loginFormPane" alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" spacing="5.0">
-                      <children>
-                          <TextField fx:id="usernameInput" minWidth="100.0" promptText="%login.name" />
-                          <PasswordField fx:id="passwordInput" minWidth="100.0" promptText="%login.password" />
-                          <HBox>
-                              <children>
-                                  <Label maxHeight="1.7976931348623157E308" minWidth="-Infinity" text="%login.environment">
-                                      <HBox.margin>
-                                          <Insets right="10.0" />
-                                      </HBox.margin>
-                                  </Label>
-                                  <ComboBox fx:id="environmentComboBox" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS" />
+<?import javafx.scene.web.WebView?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ProgressIndicator?>
+<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="loginRoot" maxHeight="1.7976931348623157E308"
+      maxWidth="1.7976931348623157E308" styleClass="login-root" xmlns="http://javafx.com/javafx/11.0.1"
+      fx:controller="com.faforever.client.login.LoginController"
+      alignment="CENTER">
+    <children>
+        <VBox maxWidth="Infinity" VBox.vgrow="ALWAYS" alignment="CENTER">
+            <VBox.margin>
+                <Insets top="30.0" left="30.0" right="30.0"/>
+            </VBox.margin>
+            <children>
+                <VBox fx:id="errorPane" alignment="CENTER" VBox.vgrow="ALWAYS">
+                    <Label fx:id="loginErrorLabel" maxWidth="500"
+                           minHeight="0.0" minWidth="0.0" styleClass="hint" VBox.vgrow="NEVER" alignment="CENTER"
+                           text="This error message is supposed to be long enough to test text wrapping"
+                           wrapText="true">
+                        <graphic>
+                            <Region styleClass="icon,error-icon"/>
+                        </graphic>
+                        <VBox.margin>
+                            <Insets bottom="5.0"/>
+                        </VBox.margin>
+                    </Label>
+                    <Button fx:id="downloadUpdateButton" maxWidth="500" minWidth="-Infinity"
+                            onAction="#onDownloadUpdateButtonClicked" prefHeight="50.0" VBox.vgrow="NEVER"
+                            text="%login.button.downloadUpdate" alignment="CENTER">
+                        <VBox.margin>
+                            <Insets bottom="10.0"/>
+                        </VBox.margin>
+                    </Button>
+                </VBox>
+                <VBox fx:id="loginProgressPane" alignment="CENTER" maxWidth="Infinity" VBox.vgrow="ALWAYS" visible="false">
+                    <children>
+                        <ProgressIndicator prefHeight="80.0" prefWidth="80.0"/>
+                        <Label text="%login.progress.message">
+                            <VBox.margin>
+                                <Insets top="14.0" />
+                            </VBox.margin>
+                        </Label>
+                    </children>
+                </VBox>
+                <VBox fx:id="loginFormPane" alignment="TOP_CENTER" maxHeight="Infinity" spacing="5.0"
+                      VBox.vgrow="ALWAYS">
+                    <children>
+                        <WebView fx:id="loginWebView" VBox.vgrow="ALWAYS" maxHeight="Infinity"/>
+                        <HBox maxWidth="500" alignment="CENTER" VBox.vgrow="NEVER" spacing="10.0">
+                            <children>
+                                <Label maxHeight="1.7976931348623157E308" minWidth="-Infinity"
+                                       text="%login.environment"
+                                       onMouseClicked="#onMouseClicked">
+                                    <HBox.margin>
+                                        <Insets right="10.0"/>
+                                    </HBox.margin>
+                                </Label>
+                                <ComboBox fx:id="environmentComboBox" maxWidth="1.7976931348623157E308"
+                                          HBox.hgrow="ALWAYS"/>
+                                <CheckBox fx:id="rememberMeCheckBox" text="%login.remember" />
                               </children>
                           </HBox>
-                          <GridPane fx:id="serverConfigPane" vgap="5.0">
+                          <GridPane fx:id="serverConfigPane" vgap="5.0" VBox.vgrow="SOMETIMES" maxWidth="500"
+                                    alignment="CENTER">
                               <columnConstraints>
-                                  <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
-                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                  <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0"/>
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
                               </columnConstraints>
                               <rowConstraints>
-                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                               </rowConstraints>
                               <children>
-                                  <TextField fx:id="serverHostField" promptText="%login.serverHost" />
-                                  <TextField fx:id="serverPortField" prefColumnCount="6" promptText="%port" GridPane.columnIndex="1" />
-                                  <TextField fx:id="replayServerHostField" layoutX="10.0" layoutY="7.0" promptText="%login.replayServerHost" GridPane.rowIndex="1" />
-                                  <TextField fx:id="replayServerPortField" layoutX="310.0" layoutY="7.0" prefColumnCount="6" promptText="%port" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                  <TextField fx:id="apiBaseUrlField" prefColumnCount="6" promptText="%login.apiBaseUrl" GridPane.columnSpan="2147483647" GridPane.rowIndex="3" />
-                                  <TextField fx:id="ircServerHostField" promptText="%login.ircServerHost" GridPane.rowIndex="2" />
-                                  <TextField fx:id="ircServerPortField" promptText="%port" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                  <TextField fx:id="serverHostField" promptText="%login.serverHost"/>
+                                  <TextField fx:id="serverPortField" prefColumnCount="6" promptText="%port"
+                                             GridPane.columnIndex="1"/>
+                                  <TextField fx:id="replayServerHostField" layoutX="10.0" layoutY="7.0"
+                                             promptText="%login.replayServerHost" GridPane.rowIndex="1"/>
+                                  <TextField fx:id="replayServerPortField" layoutX="310.0" layoutY="7.0"
+                                             prefColumnCount="6" promptText="%port" GridPane.columnIndex="1"
+                                             GridPane.rowIndex="1"/>
+                                  <TextField fx:id="apiBaseUrlField" prefColumnCount="6" promptText="%login.apiBaseUrl"
+                                             GridPane.columnSpan="2147483647" GridPane.rowIndex="3"/>
+                                  <TextField fx:id="oauthBaseUrlField" prefColumnCount="6"
+                                             promptText="%login.oauthBaseUrl"
+                                             GridPane.columnSpan="2147483647" GridPane.rowIndex="4"/>
+                                  <TextField fx:id="ircServerHostField" promptText="%login.ircServerHost"
+                                             GridPane.rowIndex="2"/>
+                                  <TextField fx:id="ircServerPortField" promptText="%port" GridPane.columnIndex="1"
+                                             GridPane.rowIndex="2"/>
                               </children>
-                              <VBox.margin>
-                                  <Insets top="20.0" />
-                              </VBox.margin>
                           </GridPane>
-                          <CheckBox fx:id="autoLoginCheckBox" alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="%login.autoLogin">
-                              <VBox.margin>
-                                  <Insets bottom="10.0" top="10.0" />
-                              </VBox.margin>
-                          </CheckBox>
-                          <Button fx:id="loginButton" defaultButton="true" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onLoginButtonClicked" text="%login.button.login" />
-                          <HBox alignment="CENTER" spacing="10.0">
-                              <children>
-                                  <Button alignment="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#forgotLoginClicked" text="%login.forgot" HBox.hgrow="ALWAYS" />
-                                  <Button alignment="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#createNewAccountClicked" text="%login.create" HBox.hgrow="ALWAYS" />
-                              </children>
-                              <VBox.margin>
-                                  <Insets top="20.0" />
-                              </VBox.margin>
-                          </HBox>
                       </children>
                   </VBox>
               </children>
           </VBox>
-      </VBox>
       <HBox alignment="BOTTOM_RIGHT" maxWidth="1.7976931348623157E308" VBox.vgrow="NEVER">
           <children>
               <Button fx:id="serverStatusButton" onMouseClicked="#seeServerStatus" text="See server status">
