--- a/src/main/resources/theme/play/teammatchmaking/matchmaking_invite_player.fxml
+++ b/src/main/resources/theme/play/teammatchmaking/matchmaking_invite_player.fxml
@@ -1,37 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
-<VBox xmlns:fx="http://javafx.com/fxml"
-      xmlns="http://javafx.com/javafx"
-      fx:controller="com.faforever.client.teammatchmaking.InvitePlayerController"
-      prefHeight="400.0" prefWidth="400.0" fx:id="root" >
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.VBox?>
+<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="root" maxHeight="400.0" spacing="20.0"
+      xmlns="http://javafx.com/javafx/11.0.1"
+      fx:controller="com.faforever.client.teammatchmaking.InvitePlayerController">
 
     <children>
-        <HBox spacing="20">
-            <TextField fx:id="playerTextField" prefWidth="190.0" onAction="#onInviteButtonClicked"
-                       onKeyPressed="#onKeyPressed"/>
-            <Button text="%teammatchmaking.invite" onAction="#onInviteButtonClicked"/>
-        </HBox>
-        <StackPane alignment="TOP_LEFT">
-            <VBox spacing="20">
-                <Label text="%teammatchmaking.invitedPlayers" />
-                <ListView fx:id="invitedPlayersListView" styleClass="empty-cells-transparent" prefWidth="190.0"/>
-                <padding>
-                    <Insets top="20.0" left="200.0"/>
-                </padding>
+        <HBox spacing="20.0">
+            <VBox prefWidth="190.0" spacing="20">
+                <Label text="%teammatchmaking.searchAndInvite"/>
+                <HBox alignment="CENTER_LEFT" spacing="20">
+                    <Label contentDisplay="RIGHT" graphicTextGap="10.0" maxWidth="1.7976931348623157E308">
+                        <graphic>
+                            <Region styleClass="icon,search-icon"/>
+                        </graphic>
+                    </Label>
+                    <TextField fx:id="playerTextField" promptText="%teammatchmaking.search.prompt" HBox.hgrow="ALWAYS">
+                    </TextField>
+                </HBox>
+                <ListView fx:id="playersListView" styleClass="empty-cells-transparent" VBox.vgrow="ALWAYS"/>
             </VBox>
-            <ListView fx:id="playersListView" styleClass="empty-cells-transparent" maxWidth="190.0"/>
-        </StackPane>
+            <VBox prefWidth="190.0" spacing="20">
+                <Label text="%teammatchmaking.invitedPlayers"/>
+                <ListView fx:id="invitedPlayersListView" styleClass="empty-cells-transparent" VBox.vgrow="ALWAYS">
+                    <placeholder>
+                        <Label text="%teammatchmaking.search.noOneInvited"/>
+                    </placeholder>
+                </ListView>
+            </VBox>
+        </HBox>
     </children>
 
     <padding>
-        <Insets left="2.0" right="2.0" top="2.0" bottom="2.0"/>
+        <Insets bottom="2.0" left="2.0" right="2.0" top="2.0"/>
     </padding>
 </VBox>
