add the "number of players" and "map size" filters to "create game" window

--- a/src/main/resources/theme/style.css
+++ b/src/main/resources/theme/style.css
@@ -630,6 +630,11 @@
   -fx-text-fill: -fx-mid-text-color;
 }
 
+.moreFilters:hover {
+  -fx-underline: true;
+  -fx-cursor: hand;
+}
+
 /***************** Settings window *****************/
 
 .settings .label {
