--- a/src/main/resources/theme/play/create_game.fxml
+++ b/src/main/resources/theme/play/create_game.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
@@ -81,54 +81,21 @@
         <Label styleClass="h2" text="%game.create.map" GridPane.columnIndex="2" GridPane.rowIndex="3"/>
         <VBox GridPane.columnIndex="2" GridPane.rowIndex="4">
             <children>
-                <AnchorPane>
+                <HBox alignment="CENTER_RIGHT">
                     <children>
-                        <TextField fx:id="mapSearchTextField" promptText="%game.create.searchMap"
-                                   AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-                                   AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
-                        <Label fx:id="moreFiltersLabel" styleClass="moreFilters"
-                               onMouseClicked="#onMoreFiltersLabelClicked"
-                               text="%game.moreFilters" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="10.0"
-                               AnchorPane.topAnchor="0.0"/>
+                        <TextField fx:id="mapSearchTextField" promptText="%game.create.searchMap" HBox.hgrow="ALWAYS">
+                            <HBox.margin>
+                                <Insets right="5.0"/>
+                            </HBox.margin>
+                        </TextField>
+                        <ToggleButton fx:id="mapFilterButton" mnemonicParsing="false"
+                                      onAction="#onMapFilterButtonClicked">
+                            <graphic>
+                                <Region styleClass="icon,filter-icon"/>
+                            </graphic>
+                        </ToggleButton>
                     </children>
-                </AnchorPane>
-                <VBox fx:id="additionalFiltersBox" spacing="3.0" visible="false">
-                    <children>
-                        <HBox alignment="CENTER_RIGHT">
-                            <children>
-                                <Label text="%game.numberOfPlayers">
-                                    <HBox.margin>
-                                        <Insets right="5.0"/>
-                                    </HBox.margin>
-                                </Label>
-                                <TextField fx:id="numberOfPlayersTextField" prefWidth="92.0"/>
-                            </children>
-                        </HBox>
-                        <HBox alignment="CENTER_RIGHT">
-                            <children>
-                                <Label text="%game.mapSizeInKm">
-                                    <HBox.margin>
-                                        <Insets right="5.0"/>
-                                    </HBox.margin>
-                                </Label>
-                                <HBox alignment="CENTER_RIGHT">
-                                    <children>
-                                        <TextField fx:id="mapWidthTextField" prefWidth="40.0"/>
-                                        <Label text="x">
-                                            <HBox.margin>
-                                                <Insets left="3.0" right="3.0"/>
-                                            </HBox.margin>
-                                        </Label>
-                                        <TextField fx:id="mapHeightTextField" prefWidth="40.0"/>
-                                    </children>
-                                </HBox>
-                            </children>
-                        </HBox>
-                    </children>
-                    <VBox.margin>
-                        <Insets top="3.0"/>
-                    </VBox.margin>
-                </VBox>
+                </HBox>
             </children>
         </VBox>
         <VBox spacing="10.0" GridPane.columnIndex="2" GridPane.rowIndex="5" GridPane.vgrow="ALWAYS">
