--- a/src/main/resources/theme/play/generate_map.fxml
+++ b/src/main/resources/theme/play/generate_map.fxml
@@ -11,9 +11,8 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.*?>
-<GridPane xmlns:fx="http://javafx.com/fxml/1" fx:id="generateMapRoot" hgap="10.0"
-          vgap="10.0" xmlns="http://javafx.com/javafx/11.0.1"
-          fx:controller="com.faforever.client.game.GenerateMapController">
+<GridPane xmlns:fx="http://javafx.com/fxml/1" fx:id="generateMapRoot" hgap="10.0" vgap="10.0"
+          xmlns="http://javafx.com/javafx/11.0.1" fx:controller="com.faforever.client.game.GenerateMapController">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
@@ -30,12 +29,19 @@
         <RowConstraints minHeight="10.0" vgrow="NEVER"/>
         <RowConstraints minHeight="10.0" vgrow="NEVER"/>
         <RowConstraints minHeight="10.0" vgrow="NEVER"/>
+        <RowConstraints minHeight="10.0" vgrow="NEVER"/>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
     </rowConstraints>
     <padding>
         <Insets left="20.0" right="20.0"/>
     </padding>
-    <Label styleClass="h2" text="%game.generateMap.recreate" GridPane.columnIndex="0" GridPane.rowIndex="0"
-           GridPane.columnSpan="3"/>
+    <Label styleClass="h2" text="%game.generateMap.recreate" GridPane.columnIndex="0" GridPane.columnSpan="3"
+           GridPane.rowIndex="0"/>
     <Label text="%game.generateMap.generatedName" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
     <TextField fx:id="previousMapName" maxHeight="Infinity"
                promptText="neroxis_map_generator_(version)_(seed)_(options)" style="-fx-pref-width: 5em"
@@ -45,15 +51,15 @@
         </tooltip>
     </TextField>
     <Separator GridPane.columnSpan="3" GridPane.rowIndex="2"/>
-    <Label styleClass="h2" text="%game.generateMap.generateNew" GridPane.columnIndex="0" GridPane.rowIndex="3"
-           GridPane.columnSpan="3" onMouseClicked="#onNewLabelClicked"/>
-    <Label fx:id="commandLineLabel" text="%game.generateMap.commandLine" GridPane.columnIndex="0" GridPane.rowIndex="4"
-           visible="false"/>
-    <TextField fx:id="commandLineArgsText" maxHeight="Infinity"
-               GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="4" visible="false"/>
+    <Label onMouseClicked="#onNewLabelClicked" styleClass="h2" text="%game.generateMap.generateNew"
+           GridPane.columnIndex="0" GridPane.columnSpan="3" GridPane.rowIndex="3"/>
+    <Label fx:id="commandLineLabel" text="%game.generateMap.commandLine" visible="false" GridPane.columnIndex="0"
+           GridPane.rowIndex="4"/>
+    <TextField fx:id="commandLineArgsText" maxHeight="Infinity" visible="false" GridPane.columnIndex="1"
+               GridPane.columnSpan="2" GridPane.rowIndex="4"/>
     <Label text="%game.generateMap.generationType" GridPane.columnIndex="0" GridPane.rowIndex="5"/>
-    <ComboBox fx:id="generationTypeComboBox" maxHeight="Infinity" GridPane.columnIndex="1"
-              GridPane.columnSpan="2" GridPane.rowIndex="5">
+    <ComboBox fx:id="generationTypeComboBox" maxHeight="Infinity" GridPane.columnIndex="1" GridPane.columnSpan="2"
+              GridPane.rowIndex="5">
         <tooltip>
             <Tooltip text="%game.create.generationType"/>
         </tooltip>
@@ -65,105 +71,101 @@
             <Tooltip text="%game.create.spawnCount"/>
         </tooltip>
     </Spinner>
-    <Label text="%game.create.mapSize" GridPane.columnIndex="0" GridPane.rowIndex="7"/>
-    <Spinner fx:id="mapSizeSpinner" maxHeight="Infinity" style="-fx-pref-width: 6.5em" GridPane.columnIndex="1"
+    <Label text="%game.create.numTeams" GridPane.columnIndex="0" GridPane.rowIndex="7"/>
+    <Spinner fx:id="numTeamsSpinner" maxHeight="Infinity" style="-fx-pref-width: 6.5em" GridPane.columnIndex="1"
              GridPane.columnSpan="2" GridPane.rowIndex="7">
+        <tooltip>
+            <Tooltip text="%game.create.numTeams"/>
+        </tooltip>
+    </Spinner>
+    <Label text="%game.create.mapSize" GridPane.columnIndex="0" GridPane.rowIndex="8"/>
+    <Spinner fx:id="mapSizeSpinner" maxHeight="Infinity" style="-fx-pref-width: 6.5em" GridPane.columnIndex="1"
+             GridPane.columnSpan="2" GridPane.rowIndex="8">
         <tooltip>
             <Tooltip text="%game.create.mapSize"/>
         </tooltip>
     </Spinner>
-    <Label fx:id="mapStyleLabel" text="%game.generateMap.style" GridPane.columnIndex="0" GridPane.rowIndex="8"
-           visible="false"/>
-    <ComboBox fx:id="mapStyleComboBox" maxHeight="Infinity" GridPane.columnIndex="1"
-              GridPane.columnSpan="2" GridPane.rowIndex="8" visible="false"/>
-    <Label text="%game.generateMap.waterSlider" GridPane.columnIndex="0" GridPane.rowIndex="9"/>
-    <HBox fx:id="waterRandomBox" alignment="CENTER_LEFT" spacing="10" GridPane.columnIndex="1"
-          GridPane.rowIndex="9">
+    <Label fx:id="mapStyleLabel" text="%game.generateMap.style" visible="false" GridPane.columnIndex="0"
+           GridPane.rowIndex="9"/>
+    <ComboBox fx:id="mapStyleComboBox" maxHeight="Infinity" visible="false" GridPane.columnIndex="1"
+              GridPane.columnSpan="2" GridPane.rowIndex="9"/>
+    <Label text="%game.generateMap.waterSlider" GridPane.columnIndex="0" GridPane.rowIndex="10"/>
+    <HBox fx:id="waterRandomBox" alignment="CENTER_LEFT" spacing="10" GridPane.columnIndex="1" GridPane.rowIndex="10">
         <Label text="%game.generateMap.random"/>
         <CheckBox fx:id="waterRandom"/>
     </HBox>
-    <HBox fx:id="waterSliderBox" alignment="CENTER_LEFT" spacing="10" GridPane.columnIndex="2"
-          GridPane.rowIndex="9">
+    <HBox fx:id="waterSliderBox" alignment="CENTER_LEFT" spacing="10" GridPane.columnIndex="2" GridPane.rowIndex="10">
         <Label text="%game.generateMap.less"/>
-        <Slider fx:id="waterSlider" max="127" majorTickUnit="1" snapToTicks="true" maxHeight="Infinity"
+        <Slider fx:id="waterSlider" majorTickUnit="1" max="127" maxHeight="Infinity" snapToTicks="true"
                 HBox.hgrow="ALWAYS"/>
         <Label text="%game.generateMap.more"/>
     </HBox>
-    <Label text="%game.generateMap.plateauSlider" GridPane.columnIndex="0" GridPane.rowIndex="10"/>
-    <HBox fx:id="plateauRandomBox" alignment="CENTER_LEFT" spacing="10" GridPane.columnIndex="1"
-          GridPane.rowIndex="10">
+    <Label text="%game.generateMap.plateauSlider" GridPane.columnIndex="0" GridPane.rowIndex="11"/>
+    <HBox fx:id="plateauRandomBox" alignment="CENTER_LEFT" spacing="10" GridPane.columnIndex="1" GridPane.rowIndex="11">
         <Label text="%game.generateMap.random"/>
         <CheckBox fx:id="plateauRandom"/>
     </HBox>
-    <HBox fx:id="plateauSliderBox" alignment="CENTER_LEFT" spacing="10" GridPane.columnIndex="2"
-          GridPane.rowIndex="10">
+    <HBox fx:id="plateauSliderBox" alignment="CENTER_LEFT" spacing="10" GridPane.columnIndex="2" GridPane.rowIndex="11">
         <Label text="%game.generateMap.less"/>
-        <Slider fx:id="plateauSlider" max="127" majorTickUnit="1" snapToTicks="true" maxHeight="Infinity"
+        <Slider fx:id="plateauSlider" majorTickUnit="1" max="127" maxHeight="Infinity" snapToTicks="true"
                 HBox.hgrow="ALWAYS"/>
         <Label text="%game.generateMap.more"/>
     </HBox>
-    <Label text="%game.generateMap.mountainSlider" GridPane.columnIndex="0" GridPane.rowIndex="11"/>
+    <Label text="%game.generateMap.mountainSlider" GridPane.columnIndex="0" GridPane.rowIndex="12"/>
     <HBox fx:id="mountainRandomBox" alignment="CENTER_LEFT" spacing="10" GridPane.columnIndex="1"
-          GridPane.rowIndex="11">
+          GridPane.rowIndex="12">
         <Label text="%game.generateMap.random"/>
         <CheckBox fx:id="mountainRandom"/>
     </HBox>
     <HBox fx:id="mountainSliderBox" alignment="CENTER_LEFT" spacing="10" GridPane.columnIndex="2"
-          GridPane.rowIndex="11">
+          GridPane.rowIndex="12">
         <Label text="%game.generateMap.less"/>
-        <Slider fx:id="mountainSlider" max="127" majorTickUnit="1" snapToTicks="true" maxHeight="Infinity"
+        <Slider fx:id="mountainSlider" majorTickUnit="1" max="127" maxHeight="Infinity" snapToTicks="true"
                 HBox.hgrow="ALWAYS"/>
         <Label text="%game.generateMap.more"/>
     </HBox>
-    <Label text="%game.generateMap.rampSlider" GridPane.columnIndex="0" GridPane.rowIndex="12"/>
-    <HBox fx:id="rampRandomBox" alignment="CENTER_LEFT" spacing="10" GridPane.columnIndex="1"
-          GridPane.rowIndex="12">
+    <Label text="%game.generateMap.rampSlider" GridPane.columnIndex="0" GridPane.rowIndex="13"/>
+    <HBox fx:id="rampRandomBox" alignment="CENTER_LEFT" spacing="10" GridPane.columnIndex="1" GridPane.rowIndex="13">
         <Label text="%game.generateMap.random"/>
         <CheckBox fx:id="rampRandom"/>
     </HBox>
-    <HBox fx:id="rampSliderBox" alignment="CENTER_LEFT" spacing="10" GridPane.columnIndex="2"
-          GridPane.rowIndex="12">
+    <HBox fx:id="rampSliderBox" alignment="CENTER_LEFT" spacing="10" GridPane.columnIndex="2" GridPane.rowIndex="13">
         <Label text="%game.generateMap.less"/>
-        <Slider fx:id="rampSlider" max="127" majorTickUnit="1" snapToTicks="true" maxHeight="Infinity"
+        <Slider fx:id="rampSlider" majorTickUnit="1" max="127" maxHeight="Infinity" snapToTicks="true"
                 HBox.hgrow="ALWAYS"/>
         <Label text="%game.generateMap.more"/>
     </HBox>
-    <Label text="%game.generateMap.mexSlider" GridPane.columnIndex="0" GridPane.rowIndex="13"/>
-    <HBox fx:id="mexRandomBox" alignment="CENTER_LEFT" spacing="10" GridPane.columnIndex="1"
-          GridPane.rowIndex="13">
+    <Label text="%game.generateMap.mexSlider" GridPane.columnIndex="0" GridPane.rowIndex="14"/>
+    <HBox fx:id="mexRandomBox" alignment="CENTER_LEFT" spacing="10" GridPane.columnIndex="1" GridPane.rowIndex="14">
         <Label text="%game.generateMap.random"/>
         <CheckBox fx:id="mexRandom"/>
     </HBox>
-    <HBox fx:id="mexSliderBox" alignment="CENTER_LEFT" spacing="10" GridPane.columnIndex="2"
-          GridPane.rowIndex="13">
+    <HBox fx:id="mexSliderBox" alignment="CENTER_LEFT" spacing="10" GridPane.columnIndex="2" GridPane.rowIndex="14">
         <Label text="%game.generateMap.less"/>
-        <Slider fx:id="mexSlider" max="127" majorTickUnit="1" snapToTicks="true" maxHeight="Infinity"
+        <Slider fx:id="mexSlider" majorTickUnit="1" max="127" maxHeight="Infinity" snapToTicks="true"
                 HBox.hgrow="ALWAYS"/>
         <Label text="%game.generateMap.more"/>
     </HBox>
-    <Label text="%game.generateMap.reclaimSlider" GridPane.columnIndex="0" GridPane.rowIndex="14"/>
-    <HBox fx:id="reclaimRandomBox" alignment="CENTER_LEFT" spacing="10" GridPane.columnIndex="1"
-          GridPane.rowIndex="14">
+    <Label text="%game.generateMap.reclaimSlider" GridPane.columnIndex="0" GridPane.rowIndex="15"/>
+    <HBox fx:id="reclaimRandomBox" alignment="CENTER_LEFT" spacing="10" GridPane.columnIndex="1" GridPane.rowIndex="15">
         <Label text="%game.generateMap.random"/>
         <CheckBox fx:id="reclaimRandom"/>
     </HBox>
-    <HBox fx:id="reclaimSliderBox" alignment="CENTER_LEFT" spacing="10" GridPane.columnIndex="2"
-          GridPane.rowIndex="14">
+    <HBox fx:id="reclaimSliderBox" alignment="CENTER_LEFT" spacing="10" GridPane.columnIndex="2" GridPane.rowIndex="15">
         <Label text="%game.generateMap.less"/>
-        <Slider fx:id="reclaimSlider" max="127" majorTickUnit="1" snapToTicks="true" maxHeight="Infinity"
+        <Slider fx:id="reclaimSlider" majorTickUnit="1" max="127" maxHeight="Infinity" snapToTicks="true"
                 HBox.hgrow="ALWAYS"/>
         <Label text="%game.generateMap.more"/>
     </HBox>
 
 
-    <Button fx:id="generateMapButton" contentDisplay="RIGHT" defaultButton="true"
-            mnemonicParsing="false" onAction="#onGenerateMapButtonClicked" styleClass="game-generate-map"
-            text="%game.generateMap" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="15">
+    <Button fx:id="generateMapButton" contentDisplay="RIGHT" defaultButton="true" mnemonicParsing="false"
+            onAction="#onGenerateMapButtonClicked" styleClass="game-generate-map" text="%game.generateMap"
+            GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="16">
     </Button>
 
     <!-- Cancel, Ok -->
-    <Button mnemonicParsing="false" onAction="#onCloseButtonClicked"
-            text="%cancel" GridPane.columnIndex="0" GridPane.halignment="LEFT"
-            GridPane.rowIndex="15">
+    <Button mnemonicParsing="false" onAction="#onCloseButtonClicked" text="%cancel" GridPane.columnIndex="0"
+            GridPane.halignment="LEFT" GridPane.rowIndex="16">
     </Button>
 </GridPane>
