#2219 - Add additional filters at "Create game" window (#2220)
Co-authored-by: Ivan <v23620@gmail.com>

--- a/src/main/resources/theme/style.css
+++ b/src/main/resources/theme/style.css
@@ -357,6 +357,13 @@
   -fx-background: -fx-base;
 }
 
+/***************** Map Filter Window *****************/
+
+.filter-map {
+  -fx-background-color: -fx-background;
+  -fx-background: -fx-base;
+}
+
 /***************** User Info Window *****************/
 
 .user-info-header-area {
