--- a/src/main/resources/theme/play/create_game.fxml
+++ b/src/main/resources/theme/play/create_game.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
@@ -17,7 +18,10 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<GridPane xmlns:fx="http://javafx.com/fxml/1" fx:id="createGameRoot" hgap="10.0" styleClass="create-game-root" vgap="10.0" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="com.faforever.client.game.CreateGameController">
+
+<GridPane fx:id="createGameRoot" hgap="10.0" styleClass="create-game-root" vgap="10.0"
+          xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
+          fx:controller="com.faforever.client.game.CreateGameController">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="256.0"/>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="256.0"/>
@@ -28,28 +32,34 @@
     <rowConstraints>
         <RowConstraints vgrow="NEVER"/>
         <RowConstraints minHeight="10.0" vgrow="NEVER"/>
-        <RowConstraints vgrow="NEVER" />
+        <RowConstraints vgrow="NEVER"/>
         <RowConstraints valignment="TOP" vgrow="SOMETIMES"/>
-        <RowConstraints vgrow="NEVER" />
-        <RowConstraints vgrow="ALWAYS" />
-        <RowConstraints vgrow="NEVER" />
+        <RowConstraints vgrow="NEVER"/>
+        <RowConstraints vgrow="ALWAYS"/>
+        <RowConstraints vgrow="NEVER"/>
     </rowConstraints>
     <children>
-    	<!-- Title, Password, Rating -->
-        <TextField fx:id="titleTextField" promptText="%game.create.title" styleClass="game-title-input" GridPane.columnSpan="2147483647" />
-        <PasswordField fx:id="passwordTextField" promptText="%game.create.password" GridPane.rowIndex="1" />
-        <CheckBox fx:id="onlyForFriendsCheckBox" mnemonicParsing="false" text="%game.create.onlyFriends" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-        <HBox alignment="CENTER_RIGHT" spacing="10.0" maxWidth="1.7976931348623157E308" GridPane.columnIndex="2" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
+        <!-- Title, Password, Rating -->
+        <TextField fx:id="titleTextField" promptText="%game.create.title" styleClass="game-title-input"
+                   GridPane.columnSpan="2147483647"/>
+        <PasswordField fx:id="passwordTextField" promptText="%game.create.password" GridPane.rowIndex="1"/>
+        <CheckBox fx:id="onlyForFriendsCheckBox" mnemonicParsing="false" text="%game.create.onlyFriends"
+                  GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+        <HBox alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" spacing="10.0" GridPane.columnIndex="2"
+              GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
             <children>
-                <Label alignment="CENTER_RIGHT" text="%game.create.rating" textAlignment="JUSTIFY" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                <TextField fx:id="minRankingTextField" minWidth="30.0" prefWidth="60.0" promptText="%games.create.minRating" HBox.hgrow="NEVER" />
-                <Label text="%games.create.minRating" />
-                <Label text="%games.create.maxRating" />
-                <TextField fx:id="maxRankingTextField" minWidth="30.0" prefWidth="60.0" promptText="%games.create.maxRating" HBox.hgrow="NEVER" />
-                <CheckBox fx:id="enforceRankingCheckBox" HBox.hgrow="NEVER" text="%games.create.enforceRating" />
+                <Label alignment="CENTER_RIGHT" text="%game.create.rating" textAlignment="JUSTIFY"
+                       GridPane.columnIndex="2" GridPane.rowIndex="1"/>
+                <TextField fx:id="minRankingTextField" minWidth="30.0" prefWidth="60.0"
+                           promptText="%games.create.minRating" HBox.hgrow="NEVER"/>
+                <Label text="%games.create.minRating"/>
+                <Label text="%games.create.maxRating"/>
+                <TextField fx:id="maxRankingTextField" minWidth="30.0" prefWidth="60.0"
+                           promptText="%games.create.maxRating" HBox.hgrow="NEVER"/>
+                <CheckBox fx:id="enforceRankingCheckBox" text="%games.create.enforceRating" HBox.hgrow="NEVER"/>
             </children>
             <padding>
-                <Insets left="2.0" right="2.0" top="2.0" />
+                <Insets left="2.0" right="2.0" top="2.0"/>
             </padding>
         </HBox>
         <Separator maxWidth="1.7976931348623157E308" GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
@@ -69,13 +79,30 @@
 
         <!-- Map List -->
         <Label styleClass="h2" text="%game.create.map" GridPane.columnIndex="2" GridPane.rowIndex="3"/>
-        <TextField fx:id="mapSearchTextField" promptText="%game.create.searchMap" GridPane.columnIndex="2"
-                   GridPane.rowIndex="4"/>
+        <VBox GridPane.columnIndex="2" GridPane.rowIndex="4">
+            <children>
+                <HBox alignment="CENTER_RIGHT">
+                    <children>
+                        <TextField fx:id="mapSearchTextField" promptText="%game.create.searchMap" HBox.hgrow="ALWAYS">
+                            <HBox.margin>
+                                <Insets right="5.0"/>
+                            </HBox.margin>
+                        </TextField>
+                        <ToggleButton fx:id="mapFilterButton" mnemonicParsing="false"
+                                      onAction="#onMapFilterButtonClicked">
+                            <graphic>
+                                <Region styleClass="icon,filter-icon"/>
+                            </graphic>
+                        </ToggleButton>
+                    </children>
+                </HBox>
+            </children>
+        </VBox>
         <VBox spacing="10.0" GridPane.columnIndex="2" GridPane.rowIndex="5" GridPane.vgrow="ALWAYS">
             <children>
                 <ListView fx:id="mapListView" maxHeight="1.7976931348623157E308" VBox.vgrow="ALWAYS"/>
-                <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false"
-                        onAction="#onRandomMapButtonClicked" text="%game.create.randomMap"/>
+                <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onRandomMapButtonClicked"
+                        text="%game.create.randomMap"/>
             </children>
         </VBox>
 
@@ -96,12 +123,12 @@
             <HBox alignment="CENTER" spacing="10.0">
                 <Label fx:id="mapSizeLabel" text="&lt;Size&gt;" GridPane.columnIndex="1" GridPane.rowIndex="1">
                     <graphic>
-                        <Region styleClass="icon,map-size-icon" />
+                        <Region styleClass="icon,map-size-icon"/>
                     </graphic>
                 </Label>
                 <Label fx:id="mapPlayersLabel" text="&lt;MaxPlayers&gt;" GridPane.rowIndex="1">
                     <graphic>
-                        <Region styleClass="icon,players-icon" />
+                        <Region styleClass="icon,players-icon"/>
                     </graphic>
                 </Label>
                 <Label fx:id="versionLabel" text="&lt;Version&gt;"/>
@@ -125,15 +152,15 @@
 
         <!-- Cancel, Ok -->
         <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onCloseButtonClicked"
-                   styleClass="more-button-padding" text="%cancel" GridPane.columnIndex="0" GridPane.halignment="LEFT"
-                   GridPane.rowIndex="6">
+                styleClass="more-button-padding" text="%cancel" GridPane.columnIndex="0" GridPane.halignment="LEFT"
+                GridPane.rowIndex="6">
             <GridPane.margin>
                 <Insets/>
             </GridPane.margin>
         </Button>
         <Button fx:id="createGameButton" defaultButton="true" minWidth="-Infinity" mnemonicParsing="false"
-                   onAction="#onCreateButtonClicked" styleClass="more-button-padding" text="%game.create.create"
-                   GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="6">
+                onAction="#onCreateButtonClicked" styleClass="more-button-padding" text="%game.create.create"
+                GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="6">
             <GridPane.margin>
                 <Insets top="15"/>
             </GridPane.margin>
@@ -144,6 +171,6 @@
 
     </children>
     <padding>
-        <Insets left="20.0" right="20.0" />
+        <Insets left="20.0" right="20.0"/>
     </padding>
 </GridPane>
