--- a/src/main/resources/theme/style.css
+++ b/src/main/resources/theme/style.css
@@ -1181,3 +1181,9 @@
   -fx-border-color: null;
   -fx-border-width: 0;
 }
+
+/***************** Player rating tooltip *****************/
+
+.rating-player-chart-tooltip {
+  -fx-background-color: -fx-base;
+}
