Update Mods before hosting
Fixes #1680

--- a/src/main/resources/theme/settings/settings.fxml
+++ b/src/main/resources/theme/settings/settings.fxml
@@ -1047,6 +1047,26 @@
                                                 </Spinner>
                                             </children>
                                         </GridPane>
+                                        <GridPane styleClass="setting-container">
+                                            <columnConstraints>
+                                                <ColumnConstraints hgrow="ALWAYS" minWidth="10.0"/>
+                                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+                                            </columnConstraints>
+                                            <rowConstraints>
+                                                <RowConstraints minHeight="10.0" valignment="TOP" vgrow="SOMETIMES"/>
+                                                <RowConstraints vgrow="SOMETIMES"/>
+                                            </rowConstraints>
+                                            <children>
+                                                <Label styleClass="setting-title"
+                                                       text="%settings.data.mapAndModAutoUpdate"/>
+                                                <Label styleClass="setting-description"
+                                                       text="%settings.data.mapAndModAutoUpdate.description"
+                                                       GridPane.columnSpan="2147483647" GridPane.hgrow="ALWAYS"
+                                                       GridPane.rowIndex="1"/>
+                                                <CheckBox fx:id="mapAndModAutoUpdateCheckBox" contentDisplay="RIGHT"
+                                                          mnemonicParsing="false" GridPane.columnIndex="1"/>
+                                            </children>
+                                        </GridPane>
                                     </children>
                                 </VBox>
                             </content>
