move `PlayerRatingChart` class from `com.faforever.client.fx` to `com.faforever.client.chat`

--- a/src/main/resources/theme/style.css
+++ b/src/main/resources/theme/style.css
@@ -1182,8 +1182,8 @@
   -fx-border-width: 0;
 }
 
-/***************** Player rating tooltip *****************/
+/***************** Player rating chart tooltip *****************/
 
-.rating-player-chart-tooltip {
+.player-rating-chart-tooltip {
   -fx-background-color: -fx-base;
 }
