#1217 - Player rating graph - show rating on mouse over (#2228)
Co-authored-by: Ivan <v23620@gmail.com>

--- a/src/main/resources/theme/style.css
+++ b/src/main/resources/theme/style.css
@@ -1181,3 +1181,9 @@
   -fx-border-color: null;
   -fx-border-width: 0;
 }
+
+/***************** Player rating chart tooltip *****************/
+
+.player-rating-chart-tooltip {
+  -fx-background-color: -fx-base;
+}
