highlight games with friends

--- a/src/main/resources/theme/style.css
+++ b/src/main/resources/theme/style.css
@@ -1177,9 +1177,21 @@
   -fx-font-size: 1.2em;
 }
 
+.game-card:friendInGame {
+  -fx-background-color: rgba(42, 253, 53, 0.15);
+}
+
 .table-row-cell {
   -fx-border-color: null;
   -fx-border-width: 0;
+}
+
+.table-row-cell:friendInGame {
+  -fx-background-color: rgba(42, 253, 53, 0.15);
+}
+
+.table-row-cell:selected:friendInGame {
+  -fx-background-color: rgba(42, 253, 53, 0.4);
 }
 
 /***************** Player rating chart tooltip *****************/
